--- a/voter_init.yaml
+++ b/voter_init.yaml
@@ -1,11 +1,11 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: voter-load
+  name: voterjob-init
   labels:
     name: voterjob
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       name: testclient
@@ -16,6 +16,8 @@ spec:
     spec:
       containers:
       - name: c
-        image: jadejakajal13/k8s-voter:1
-        args: ["./k8s-run.sh", "async-benchmark", "mydb-voltdb-cluster-client.voltdb.svc.cluster.local", "10" ,"5", "1200", "6", "8" ,"30000"]
+        image: gulshan08091988/k8s-voter:1
+        # args "file", mode, hosts
+        args: ["./k8s-run.sh", "init", "mydb-voltdb-cluster-client.voltdb.svc.cluster.local"]
       restartPolicy: Always
+
